Etapa4-B/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tfi-prod
  labels:
    app: tfi
    environment: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: tfi-qa
  labels:
    app: tfi
    environment: qa
---
apiVersion: v1
kind: Namespace
metadata:
  name: tfi-uat
  labels:
    app: tfi
    environment: uat
